#1847 Flight Session Automation - New Menu Item

--- a/locales/en/messages.json
+++ b/locales/en/messages.json
@@ -264,6 +264,9 @@
     "tabFirmwareFlasher": {
         "message": "Firmware Flasher"
     },
+    "tabSessionAutomation": {
+        "message": "Session Automation"
+    },
     "tabLanding": {
         "message": "Welcome"
     },
